// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spinner rendering renders expected elements 1`] = `
<div
  aria-label="Loading"
  className="Spinner CssSpinner Spinner--medium"
  id="test"
  role="status"
/>
`;

exports[`Spinner rendering renders expected elements when className is set 1`] = `
<div
  aria-label="Loading"
  className="Spinner CssSpinner Spinner--large TestClass"
  id="test"
  role="status"
/>
`;
